# substack-python

./: README.md  pyproject.toml
src/substack/: __init__.py  client.py  structures.py  version.py
src/substack/api/: posts.py
src/substack/utils/: http.py
substack/: auth.py  client.py
substack/api/: base.py
substack/utils/: http.py
